--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="UTF-8">
   <title>Traffic Light Woohoo!!</title>
-  <link rel="stylesheet" type="text/css" href="./styles.css">
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
  </head>
  <body>
    <h1> Traffic Light </h1>
@@ -24,7 +24,7 @@
    </div>
    
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-  <script src="script.js"></script>
+  <script src="js/script.js"></script>
    
  </body>
 </html>
